logs/uso_de_ia/S01/1.2.2/prompt.md
Realizar analisis univarido (sections/S01-Metodologia_EDA_Analisis/1_2_EDA/code/01-analisis_univariado): Debe incluir distribuciones univariadas de la frecuencia, la severidad, los costos y el tamaño de las empresas. 

Transversal: 
1. Guardar datasets de staging en data/staging/S01/ para que estos sean reutilizados por futuros procesos que los requieran. Guarda la descripción detallada de cada dataset en docs/staging_data.md
2.Los plots deben incluirse en su respectviva carpeta de results, para este proceso correspondiente es 'sections/S01-Metodologia_EDA_Analisis/1_2_EDA/results/imgs'
3. Al finalizar incluye los hallazgos preliminares de este proceso en 'sections/S01-Metodologia_EDA_Analisis/1_2_EDA/results/Insights_EDA.md' para mi revisión.
4. Diligencia logs/uso_de_ia/S01/1.2.2/output.md como logs del proceso que realizaste.